[build-system]
build-backend= "setuptools.build_meta"
requires = [
    "setuptools",
    "wheel",
    "attrs",
]

[project]
name = "pytoolkit928"
authors = [
    {name = "atav928", email = "dev@tavnets.com"}
]
requires-python = ">=3.7,<4"
license = {file = "LICENSE"}
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: Implementation",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10"
]
dynamic = ["version", "readme", "dependencies","description"]

[project.urls]
homepage = "https://github.com/atav928/pytoolkit"

[project.optional-dependencies]
test = [
    "pytest-cov",
    "pytest",
    "pytest-mock",
    "unittest2",
    "dataclasses",
    "six"
]

[tool.pytest.ini_options]
addopts = "-v --cov --cov-report html --cov-report term-missing --cov-fail-under 50"

[tool.setuptools.dynamic]
dependencies = {file = "requirements.txt"}
readme = {file = ["README.md"], content-type = "text/markdown"}
version = {attr = "pytoolkit.__version__"}
description = {file = "DESCRIPTION"}

[tool.setuptools.packages.find]
where = ["src", "tests"]
include = ["pytoolkit*"]
exclude = ["*.xml"]
namespaces = true

[tool.coverage.run]
source = ["src"]

[tool.pylint]
max-line-length = 101